--- a/argocd-application.yaml
+++ b/argocd-application.yaml
@@ -8,7 +8,7 @@ spec:
     namespace: {{ .Values.namespace }}
     server: https://kubernetes.default.svc
   source:
-    repoURL: 'https://<your-git-repo-url>'
+    repoURL: 'https://github.com/frendzprasath/ROSA-ArgoCD-Assessment.git'
     path: charts/nginx-app
     targetRevision: HEAD
   project: default
